--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@expo/webpack-config": "^18.0.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@types/yup": "^0.32.0",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
