--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "@types/yup": "^0.32.0",
@@ -21,10 +23,13 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-date-picker": "^4.2.9",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
+    "react-navigation-stack": "^2.10.4",
     "yup": "^1.0.2"
   },
   "devDependencies": {
